<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".activities.SignUpActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:id="@+id/linearSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/form_email"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrey"
            android:padding="10dp"
            android:inputType="text"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            android:hint="@string/form_userName"
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content"
            android:background="#80ffffff"
            android:padding="10dp"
            android:inputType="text"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstName"
            android:hint="@string/form_firstName"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ffffff"
            android:padding="10dp"
            android:inputType="text"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastName"
            android:hint="@string/form_lastName"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ffffff"
            android:padding="10dp"
            android:inputType="text"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumber"
            android:hint="@string/form_phoneNumber"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ffffff"
            android:padding="10dp"
            android:inputType="phone"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/form_password"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ffffff"
            android:padding="10dp"
            android:inputType="textPassword"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatPassword"
            android:hint="@string/form_repeatPassword"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ffffff"
            android:padding="10dp"
            android:inputType="textPassword"/>

        <Spinner
            android:id="@+id/spinRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/role"
            android:padding="10dp"
            android:spinnerMode="dropdown"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:text="Sign Up"
        android:textStyle="bold"
        android:textSize="18dp"
        android:backgroundTint="@color/DarkerGreen"
        android:enabled="false"/>

</RelativeLayout>