<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.UserProfileActivity"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">

        <include layout="@layout/toolbar"
            android:id="@+id/toolbar"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_above="@+id/bottom_nav">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="250dp"
                android:gravity="center_vertical"
                app:layout_constraintStart_toStartOf="@+id/scrollView1"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>



            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">


                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/imageview_profImg"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_margin="15dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:src="@drawable/profile" />

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/plusForImage"
                                android:layout_width="23dp"
                                android:layout_height="23dp"
                                app:layout_constraintEnd_toEndOf="@+id/imageview_profImg"
                                app:layout_constraintBottom_toBottomOf="@+id/imageview_profImg"
                                android:src="@drawable/add_green"
                                android:visibility="gone"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="50dp"
                            android:orientation="vertical">



                            <TextView
                                android:id="@+id/textview_username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#fff"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textview_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#fff"
                                android:textSize="20sp"
                                android:textStyle="normal" />

                        </LinearLayout>
                    </LinearLayout>

                    <TableLayout
                        android:id="@+id/tableview_editable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="25dp"
                        android:visibility="visible">
                        <TableRow>

                            <TextView
                                android:layout_column="1"
                                android:padding="3dp"
                                android:text="First Name: "
                                android:textColor="#fff"
                                android:textSize="20sp"
                                />

                            <TextView
                                android:id="@+id/textview_firstName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#fff"
                                android:textSize="25sp"
                                android:textStyle="normal" />

                            <EditText
                                android:id="@+id/editview_firstname"
                                android:layout_height="wrap_content"
                                android:layout_width="200dp"
                                android:layout_column="2"
                                android:background="@drawable/light_round"
                                android:inputType="text"
                                android:padding="3dp"
                                android:textColor="#fff"
                                android:textSize="23sp"
                                android:visibility="gone"/>

                        </TableRow>
                        <TableRow>
                            <TextView
                                android:layout_column="1"
                                android:padding="3dp"
                                android:text="Last Name: "
                                android:textColor="#fff"
                                android:textSize="20sp"
                                />


                            <TextView
                                android:id="@+id/textview_lastName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#fff"
                                android:textSize="25sp"
                                android:textStyle="normal" />

                            <EditText
                                android:id="@+id/editview_lastname"
                                android:layout_height="wrap_content"
                                android:layout_width="200dp"
                                android:layout_column="2"
                                android:background="@drawable/light_round"
                                android:inputType="text"
                                android:padding="3dp"
                                android:textColor="#fff"
                                android:textSize="23sp"
                                android:visibility="gone"/>


                        </TableRow>

                        <TableRow>

                            <TextView
                                android:layout_column="1"
                                android:padding="3dp"
                                android:text="Phone Number: "
                                android:textColor="#fff"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/textview_phone"
                                android:layout_column="2"
                                android:padding="3dp"
                                android:textColor="#fff"
                                android:textSize="20sp" />

                            <EditText
                                android:id="@+id/editview_phone"
                                android:layout_width="200dp"
                                android:layout_column="2"
                                android:background="@drawable/light_round"
                                android:inputType="phone"
                                android:padding="3dp"
                                android:textColor="#fff"
                                android:textSize="23sp"
                                android:visibility="gone"/>

                        </TableRow>

                    </TableLayout>

                    <Button
                        android:id="@+id/button_edit"
                        android:layout_width="80dp"
                        android:layout_height="45dp"
                        android:background="@drawable/edit_button"
                        android:text="@string/edit"
                        />

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/edit_buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/cancel_button"
                    android:text="@string/cancel"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@drawable/save_button"
                    android:text="@string/save"
                    android:textColor="#fff"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:menu="@menu/bottom_nav"
            android:background="?android:attr/windowBackground"/>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"
        android:visibility="visible"/>

</androidx.drawerlayout.widget.DrawerLayout>